[package]
name = "bit-set"
version = "0.6.0"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A set of bits"
repository = "https://github.com/contain-rs/bit-set"
homepage = "https://github.com/contain-rs/bit-set"
documentation = "https://contain-rs.github.io/bit-set/bit_set"
keywords = ["data-structures", "bitset"]
readme = "README.md"

[dev-dependencies]
rand = "0.3"
serde_json = "1.0"

[dependencies.bit-vec]
version = "0.6.0"
default-features = false

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[features]
default = ["std"]
nightly = ["bit-vec/nightly"]
std = ["bit-vec/std"]
